--- a/frontend/src/components/Home/MainSection/Feed/Post/Comment/CommentItem/CommentItem.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/Comment/CommentItem/CommentItem.css
@@ -20,6 +20,7 @@
 
 .Dark .Comment p{
     color: white;
+    opacity: 0.8;
 }
 
 
@@ -39,9 +40,8 @@
     justify-content: space-between;
 }
 .Time{
-    font-weight: normal;
-    font-style: italic;
-    font-size: 7px;
+    font-weight: normal !important;
+    font-size: 11.5px !important;
 }
 
 .CommentInfo p{
