--- a/frontend/src/containers/Home/Home.css
+++ b/frontend/src/containers/Home/Home.css
@@ -1,10 +1,11 @@
 .Home{
   position: relative;
   transition: all 0.3s;
+  display: block;
 }
 
 .Dark {
-  background-color: #121416;
+  background-color: #121212;
 }
 
 .main{
