--- a/frontend/src/containers/Home/LeftPanel/LeftPanel.css
+++ b/frontend/src/containers/Home/LeftPanel/LeftPanel.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 77px;
     left: 0%;
-    height: 100%;
+    height: 100vh;
     font-family:"Work Sans","Open Sans";
     max-width: 300px;
     background-color: white;
@@ -16,12 +16,13 @@
 
 .Dark{
     background-color: #1E2021;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
     border:none;
 }
 
 .Dark p{
     color: white;
+    opacity: 0.7;
 }
 
 @media (max-width: 700px){
