--- a/frontend/src/containers/Home/Sections/SectionComp/Section.css
+++ b/frontend/src/containers/Home/Sections/SectionComp/Section.css
@@ -79,7 +79,7 @@
     font-size: 14px;
     object-fit: contain;
     /* color:white; */
-    color:black;
+    color:inherit;
    font-weight: 450;
    font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
 
