--- a/frontend/src/components/Home/MainSection/Feed/Post/ActionPopup/ActionPopup.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/ActionPopup/ActionPopup.css
@@ -4,7 +4,7 @@
     top: 55px;
     right: 20px;
     padding: 10px;
-    box-shadow: inherit;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     box-sizing: border-box;
     border-radius: 5px;
     visibility: hidden;
