--- a/frontend/src/containers/Home/MainSection/MainSection.css
+++ b/frontend/src/containers/Home/MainSection/MainSection.css
@@ -25,7 +25,7 @@
 }
 
 .Feed{
-    margin-top: 20px;
+    margin-top: 10px;
     flex: 1;
 }
 
@@ -64,3 +64,8 @@
     }
 }
 
+@media (max-width:450px) {
+    .MainSection{
+        margin: 0px;
+    }
+}
