--- a/frontend/src/containers/Home/Sections/SectionComp/Section.css
+++ b/frontend/src/containers/Home/Sections/SectionComp/Section.css
@@ -9,16 +9,15 @@
     
 }
 
-a{
+/* a{
     color: black;
-}
+} */
 
 
 .sectionName{
     font-size: 12.5px;
     margin-left: 6px;
-    /* color: white; */
-    color:grey;
+    color: inherit;
     margin-bottom: 2px;
 }
 
