--- a/frontend/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/Post.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background-color: #e0dfdf;
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 8px;
     margin: 15px 5px;
     min-width: 300px;
     max-width: 550px;
@@ -15,9 +15,10 @@
 }
 
 .Dark{
-    background-color: #1E2021;
+    background-color:rgb(15, 15, 15);
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
-    border:none;
+    border: 0.5px solid rgb(20, 20, 20);
+
     color: white;
 }
 .Dark p{
