--- a/frontend/src/containers/Home/LeftPanel/LeftPanel.css
+++ b/frontend/src/containers/Home/LeftPanel/LeftPanel.css
@@ -1,12 +1,13 @@
 .LeftPanel{
     position: sticky;
-    top: 77px;
+    top: 55px;
     left: 0%;
     height: 100vh;
     font-family:"Work Sans","Open Sans";
     max-width: 300px;
     background-color: white;
     transition: all 0.3s;
+   
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
@@ -15,9 +16,9 @@
 }
 
 .Dark{
-    background-color: #1E2021;
+    background-color:rgb(2, 1, 1);
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
-    border:none;
+    border: 2px solid rgb(17, 16, 16);
 }
 
 .Dark p{
