--- a/frontend/src/containers/Home/Chat/chatIn.css
+++ b/frontend/src/containers/Home/Chat/chatIn.css
@@ -5,13 +5,14 @@
     /* box-sizing: border-box; */
     /* flex-direction: column-reverse; */
     position: fixed;
-    width: 450px;
+    width: 400px;
     min-height:100nv;
     height: 600px;
-    top: 80px;
-    right: 0;
+    top: 70px;
+    right: 20px;
     background-color:lightgrey;
     z-index: 300;
+    border-radius: 15px;
 }
 
 .chat_header{
@@ -59,6 +60,10 @@
     margin-left: 10px;
     font-size: xx-small;
 }
+.chat_name{
+   top: -15px;
+   font-size: xx-small; 
+}
 
 .chat_message{
     position:relative;
@@ -72,6 +77,7 @@
     font-size: x-small;
     color: black;
 }
+
 
 .chat_receiver{
     margin: auto;
