--- a/frontend/src/components/Home/Header/Header.css
+++ b/frontend/src/components/Home/Header/Header.css
@@ -1,326 +1,208 @@
+.Header{
+    background-color: white;
+    margin: auto;
+    position: sticky;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 100;
+    box-sizing: border-box;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
+    transition: all 0.3s;
+}
 
-/* For Desktop */
-@media screen and (min-width: 1330px) {
-    .header {
-        /* spacing */
-        overflow: hidden;
-        padding: 15px 20px;
-        display: flex;
-        justify-content: space-between;
-      
-        /* positioning */
-        position: sticky;
-        z-index: 100;
-        top:0;
+.Dark{
+    background-color:black;
+    border-bottom: 0.5px solid rgb(32, 32, 32);
+    /* box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em; */
+}
+
+.Dark .IconColor{
+    color: white;
+}
+
+.Dark .Input{
+    background-color:#313033 ;
+    border: none;
+}
+
+.Dark .Input input{
+    color: white;
+    opacity: 0.85;
+}
+
+.Dark .btnSearch{
+    color: white;
+    opacity: 0.9;
+}
+
+.HeaderContent{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+}
+
+.HeaderContent  img{
+    height: 40px;
+    margin-top: auto;
+    /* height: 70px; */
+}
+
+.SearchAndCreate{
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+}
+
+
+.CreatePostButton1{
+    background-color: #1DA1F2;
+    padding:6px 14px;
+    border-radius:50px;
+    margin-left: 20px;
+    outline: none;
+    border: none;
+    display: flex;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+}
+
+.CreatePostButton2{
+    background-color: #1DA1F2;
+    padding:5px 10px;
+    border-radius:20px;
+    border: none;
+    display: none;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    align-items: center;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.CreatePostButton1 p{
+    color: white;
+}
+
+.Input{
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(248, 248, 248);
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 50px;
+    padding: 5px 10px 5px 5px;
+    align-items: center;
+}
+
+.MenuIcon {
+    display: none;
+}
+
+.Input input{
+    background-color: transparent;
+    width: 400px;
+    border: none;
+    outline: none;
+    padding: 0px 10px;
+}
+
+.Input input:focus{
+    outline: none;
+    border: none;
+}
+
+.Input button{
+    border:none;
+    cursor: pointer;
+    background-color: transparent;
+}
+
+.Buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.HamburgerButton{
+    display: none;
+}
+
+.NotfBtn{
+    display: block;
+}
+
+@media (max-width:850px) {
+    .NotfBtn{
+        display: none;
+    }
     
+}
+@media (max-width:780px) {
+    .CreatePostButton1 p{
+        display: none;
+    }
+}
 
-        /* background */
-        box-shadow: 0 0.5px 0.5px #ccc;
-        background-color: white;
+@media (max-width: 700px){
+    .Input input{
+        width: 300px;
     }
 
-    .header__left {
-        display: flex;
-        justify-content: space-evenly;
+    .HeaderContent  img{
+        height: 50px;
+    }
+    
+}
+
+
+@media (max-width:630px) {
+    .HeaderContent{
+        height: 50px;
+    }
+    .HeaderContent img{
+        display: none;
+    }
+    .HamburgerButton{
+        display: block;
+    }
+    
+}
+
+@media (max-width:550px) {
+    .ToggleBtn{
+        display: none !important;
+    }
+    .CreatePostButton1{
+        display: none;
+    }
+    .CreatePostButton2{
+        display: block;
+    }
+}
+
+@media (max-width: 500px){
+    .Input input{
+        width: 200px;
+    }
+    .Input{
+        padding-top: 2px;
+        padding-bottom: 2px;
     }
 
-    .header__left > img {
+    .HeaderContent  img{
         height: 40px;
     }
-
-    /* .header__input {
-        padding-left: 10px;
-        display: flex;
-        align-items: center;
-        background-color: #eff2f5;
-        margin-left: 20px;
-        border-radius: 9999px;
-
-    }
-
-    .header__input > input {
-        border: none;
-        background-color: transparent;
-        outline-width: 0 s;
-        text-decoration: none !important;
-    } */
     
-    .header__menu {
-        display: none;
-    }
-    .header__input{
-        margin-left: 20px;
-        width: fit-content;
-        height: fit-content;
-        position: relative;
-        background-color: #eff2f5;
-        border-radius: 9999px;
-    }
-    .inputSearch{
-        height: 50px;
-        width: 50px;
-        border-style: none;
-        padding: 10px;
-        font-size: 15px;
-        outline: none;
-        border-radius: 25px;
-        transition: all .5s ease-in-out;
-        background-color: #eff2f545;
-        padding-right: 40px;
-        color:rgb(0, 0, 0);
-    }
-
-    .inputSearch::placeholder{
-    /* color:rgba(255,255,255,.5); */
-        font-size: 15px;
-        font-weight: 100;
-    }
-    /* button css */
-    .btnSearch{
-        width: 50px;
-        height: 50px;
-        border-style: none;
-        font-size: 20px;
-        font-weight: bold;
-        outline: none;
-        cursor: pointer;
-        border-radius: 50%;
-        position: absolute;
-        right: 0px;
-        background-color:transparent;
-        pointer-events: painted;  
-    }
-    /* animate button to open search */
-    .btnSearch:focus ~ .inputSearch{
-        width: 300px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom:1px solid rgba(255,255,255,.5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-    }
-
-    /* keeps input search open */
-    .inputSearch:focus{
-        width: 300px;
-        border-radius: 0px;
-        background-color: transparent;
-        border-bottom:1px solid rgba(255,255,255,.5);
-        transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-    }
-
-
-    .header__middle {
-        display: inline-flex;
-        flex: 1;
-        justify-content: center;
-    }
-    /* change icon color */
-    .header__option > .MuiSvgIcon-root {
-        color: gray;
-    }
-    .header__option:hover > .MuiSvgIcon-root {
-        color: #2e81f4;
-    }
-
-    /* If buttons are active */
-    .header__optionActive > .MuiSvgIcon-root{
-        color: #2e81f4;
-    }
-    .header__optionActive{
-        /* border-bottom: 4px solid #2e81f4; */
-        background-color: #eff2f5;
-        border-radius: 22px;
-    }
-    .header__optionActive > p{
-        color: #2e81f4;
-    }
-    /* space between middle icons */
-    .header__option {
-        display: flex;
-        align-items: center;
-        padding: 0px 30px;
-        cursor: pointer;
-    }
-    /* bg of icon on hover */
-    .header__option:hover{
-        background-color: #eff2f5;
-        border-radius: 22px;
-        align-items: center;
-        padding: 0 30px;
-        border-bottom: none;
-    }
-    .header__option > p {
-        padding: 0 10px;
-        font-size: large;
-    }
-    .header__option:hover > p{
-        color: #2e81f4;
-    }
-    .header__info{
-        display: flex;
-        align-items: center;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    .header__info > h4 {
-        margin-left: 10px;
-    }
-
-    .header__right {
-        display: flex;
-    }
 }
 
-
-
-@media screen and (max-width: 1330px) and (min-width:520px) {
-    .header {
-        /* spacing */
-        overflow: hidden;
-        padding: 15px 20px;
-        display: flex;
-        justify-content: space-between;
-
-        /* positioning */
-        position: sticky;
-        z-index: 100;
-        top:0;
-        margin-bottom: 10px;
-
-        /* background */
-        box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
-        background-color: white;
-    }
-    .header__left {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .header__left > img {
-        height: 5vw;
-        padding: 2% 2%;
-    }
-    
-    .header__menu {
-        height: 5vw;
-        padding: 2% 2%;
-    }
-
-    
-    .header__menu > .MuiSvgIcon-root{
-        font-size: 5vw;
-    }
-
-    .header__input {
-        display: none;
-    }
-    
-    .header__middle {
-        display: none;
-        justify-content: center;
-    }
-
-    .header__right{
-        position: absolute;
-        right: 2%;
-    }
-    
-    .header__info{
-        display: flex;
-        align-items: center;
-    }
-
-    .header__info > h4 {
-        display: none;
-        margin-left: 10px;
-    }
-
-    .header__right {
-        display: flex;
-    }
-
-    .header__right > .MuiIconButton-root > .MuiSvgIcon-root{
-        font-size: x-large;
-        height: 2rem;
-        padding: 2% 2%;
-    }
-
-    .header__info > .MuiAvatar-root{
-        height: 2rem;
-        width: 2rem;
-    }
-}
-@media screen and (max-width: 520px) {
-    .header {
-        /* spacing */
-        overflow: hidden;
-        padding: 15px 20px 15px;
-        display: flex;
-        justify-content: space-between;
-
-        /* positioning */
-        position: sticky;
-        z-index: 100;
-        top:0;
-
-        /* background */
-        box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
-        background-color: white;
-    }
-    .header__left {
-        display: flex;
-        justify-content: space-evenly;
-        padding-top: 2.3%;
-    }
-
-    .header__left > img {
-        height: 7vw;
-        padding: 2% 2%;
-    }
-    
-    .header__menu > .MuiIconButton-root > .MuiSvgIcon-root {
-        height: 5vw;
-        padding: 2% 2%;
-    }
-
-    
-    .header__menu > .MuiSvgIcon-root{
-        font-size: 7vw;
-    }
-
-    .header__input {
-        display: none;
-    }
-    
-    .header__middle {
-        display: none;
-        justify-content: center;
-    }
-
-    .header__right{
-        display: flex;
-        position: absolute;
-        right: 0.1em;
-        padding: 0%;
-    }
-    
-    .header__info{
-        display: flex;
-        align-items: center;
-    }
-
-    .header__info > h4 {
-        display: none;
-    }
-
-    .header__right > .MuiIconButton-root > .MuiSvgIcon-root{
-        font-size: x-large;
-        height: 2rem;
-    }
-
-    .header__info > .MuiAvatar-root{
-        height: 2rem;
-        width: 2rem;
+@media (max-width:400px){
+    .CreatePostButton2{
+        padding: 2px 6px;
     }
 }
