--- a/frontend/src/containers/Home/LeftPanel/LeftPanel.css
+++ b/frontend/src/containers/Home/LeftPanel/LeftPanel.css
@@ -1,13 +1,12 @@
 .LeftPanel{
     position: sticky;
-    top: 55px;
+    top: 60px;
     left: 0;
-    height: 100vh;
+    height: 70vh;
     font-family:"Work Sans","Open Sans";
     max-width: 300px;
     background-color: white;
     transition: all 0.3s;
-   
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 }
 
@@ -17,12 +16,15 @@
 
 .Dark{
     background-color:rgb(2, 1, 1);
+    color:rgb(202, 201, 201);
+    font-family: inherit;
     /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
     border: 2px solid rgb(17, 16, 16);
 }
 
 .Dark p{
-    color: white;
+    color: beige;
+    text-decoration-color: beige;
     opacity: 0.7;
 }
 
