--- a/frontend/src/containers/Home/Sections/SectionComp/Section.css
+++ b/frontend/src/containers/Home/Sections/SectionComp/Section.css
@@ -16,6 +16,7 @@
 
 .sectionName{
     font-size: 12.5px;
+    font-weight:100;
     margin-left: 6px;
     color: inherit;
     margin-bottom: 2px;
