--- a/frontend/src/containers/Home/Sections/SectionList.css
+++ b/frontend/src/containers/Home/Sections/SectionList.css
@@ -32,6 +32,8 @@
 .sectionName{
     color: inherit;
     font-size: 12.5px;
+    font-weight: 400;
+    color:#777;
     margin-left: 6px;
     margin-bottom: 2px;
 }
