--- a/frontend/src/components/Home/Header/Header.css
+++ b/frontend/src/components/Home/Header/Header.css
@@ -9,6 +9,8 @@
     box-sizing: border-box;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
     transition: all 0.3s;
+    margin-bottom: 0.5px;
+
 }
 
 .Dark{
