--- a/frontend/src/components/Home/RightPanel/Activity/Activity.css
+++ b/frontend/src/components/Home/RightPanel/Activity/Activity.css
@@ -1,4 +1,5 @@
 .Activity{
+
     padding: 20px;
     background-color: inherit;
     width:100%;
@@ -6,6 +7,7 @@
     /* height: 100vh; */
     display: flex;
     flex-direction: column;
+    /* margin-top: 20px; */
 }
 
 .Activity>h3{
