--- a/frontend/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/frontend/src/components/Home/MainSection/Feed/Post/Post.css
@@ -59,6 +59,7 @@
     display: flex;
     direction: row;
     align-items: center;
+    cursor: pointer;
 }
 .NamePhoto > p{
     margin-left: 10px;
