--- a/frontend/src/components/Home/Header/Header.css
+++ b/frontend/src/components/Home/Header/Header.css
@@ -100,6 +100,8 @@
     border-radius: 50px;
     padding: 5px 10px 5px 5px;
     align-items: center;
+    width: 400px;
+    position: relative;
 }
 
 .MenuIcon {
@@ -108,7 +110,7 @@
 
 .Input input{
     background-color: transparent;
-    width: 400px;
+    width: 100%;
     border: none;
     outline: none;
     padding: 0px 10px;
@@ -138,18 +140,20 @@
 .NotfBtn{
     display: block;
 }
+
 .searchDropdown{
     z-index:-100;
-    top: 10px;
+    top: 0px;
+    left: 0px;
     position:absolute;
     display: flex;
-    width:440px;
+    width:inherit;
     flex-direction: column;
     background-color: rgb(248, 248, 248);
     border: 1px solid #ccc;
     border-radius: 20px;
     box-sizing: border-box;
-    padding: 40px 5px 5px 5px;
+    padding: 40px 5px 5px 0px;
     align-items: left;
 }
 .searchDropdown > ul{
@@ -202,7 +206,7 @@
 }
 
 @media (max-width: 700px){
-    .Input input{
+    .Input{
         width: 300px;
     }
 
@@ -217,7 +221,7 @@
     .HeaderContent{
         height: 50px;
     }
-    .HeaderContent img{
+    #fuckoff{
         display: none;
     }
     .HamburgerButton{
@@ -239,16 +243,16 @@
 }
 
 @media (max-width: 500px){
-    .Input input{
-        width: 200px;
+    .Input{
+        width: 250px;
     }
     .Input{
         padding-top: 2px;
         padding-bottom: 2px;
     }
 
-    .HeaderContent  img{
-        height: 40px;
+    #fuckoff{
+        display: none;
     }
     
 }
