--- a/src/components/Profile/MainSection/UserPosts.css
+++ b/src/components/Profile/MainSection/UserPosts.css
@@ -13,3 +13,18 @@
     margin: 20px;
     box-sizing: border-box;
 }
+
+@media (max-width:760px) {
+    .ImgBox{
+        height: 150px;
+        width: 150px;
+        margin: 5px;
+    }
+}
+
+@media (max-width:400px) {
+    .ImgBox{
+        height: 120px;
+        width: 100px;
+    }
+}
