--- a/src/containers/Profile/RightPanel/RightPanel.css
+++ b/src/containers/Profile/RightPanel/RightPanel.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     height: 100vh;
     max-width: 300px;
+    min-width: 270px;
     position: sticky;
     right: 0px;
     top: 55px;
@@ -24,9 +25,11 @@
     opacity: 0.7;
 }
 
-
-@media (max-width: 1000px){
+@media (max-width:1060px) {
     .RightPanel{
-        display: none;
+        max-width: 100%;
+        max-height: 450px;
+        position: relative;
+        top: 0px;
     }
 }
