--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -143,18 +143,21 @@
 
 .searchDropdown{
     z-index:-100;
-    top: 0px;
-    left: 0px;
+    top: 10px;
+    left: -1px;
     position:absolute;
     display: flex;
     width:inherit;
     flex-direction: column;
     background-color: rgb(248, 248, 248);
     border: 1px solid #ccc;
-    border-radius: 20px;
+    border-radius: 10px;
     box-sizing: border-box;
     padding: 40px 5px 5px 0px;
     align-items: left;
+    max-height: 400px;
+    min-height: 70px;
+    overflow-y: scroll;
 }
 .searchDropdown > ul{
   list-style: none;
