--- a/src/containers/Profile/RightPanel/RightPanel.css
+++ b/src/containers/Profile/RightPanel/RightPanel.css
@@ -28,6 +28,7 @@
 @media (max-width:1060px) {
     .RightPanel{
         max-width: 100%;
+        min-width: 100%;
         max-height: 450px;
         position: relative;
         top: 0px;
