added comment reply

--- a/src/components/Home/MainSection/Feed/Post/ActionPopup/CommentActionPopup.css
+++ b/src/components/Home/MainSection/Feed/Post/ActionPopup/CommentActionPopup.css
@@ -1,8 +1,8 @@
-.ActionPopUp{
+.CommentActionPopUp{
     background-color: inherit;
     position: absolute;
-    top: 55px;
-    right: 20px;
+    top: 30px;
+    right: 10px;
     padding: 5px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     box-sizing: border-box;
@@ -18,21 +18,21 @@
     opacity: 1;
 }
 
-.ActionPopUp div{
+.CommentActionPopUp div{
     display: flex;
     flex-direction: row;
-    margin: 10px 0px;
+    margin: 6px 0px;
     cursor: pointer;
     box-sizing: border-box;
     padding: 5px;
 }
 
-.ActionPopUp div:hover{
+.CommentActionPopUp div:hover{
     background-color: #eee;
 }
 
-.ActionPopUp div > p {
-    margin-left: 10px;
+.CommentActionPopUp div > p {
+    margin-left: 5px;
 }
 
 .grey {
