--- a/src/containers/Home/LeftPanel/LeftPanel.css
+++ b/src/containers/Home/LeftPanel/LeftPanel.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 61.5px;
     left: 0;
-    height: 70vh;
+    height: 100%;
     font-family:"Work Sans","Open Sans";
     max-width: 300px;
     background-color: white;
