--- a/src/containers/Home/RightSection/RightPanel.css
+++ b/src/containers/Home/RightSection/RightPanel.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     top: 61.5px;
-    height: 91vh;
+    height: 100%;
     max-width: 300px;
     position: sticky;
     right: 0px;
