--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+html{
+  height: 100%;
+}
+
+body{
+  height: 100%;
+  overflow: hidden;
+}
+
+#root{
+  height: 100%;
+}
 
 
 
