--- a/src/components/Profile/MainSection/UserPosts.css
+++ b/src/components/Profile/MainSection/UserPosts.css
@@ -1,7 +1,7 @@
 .Posts{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
     justify-content: space-between;
     align-items: center;
 }
