--- a/src/components/Home/MainSection/CreatePost/CreatePost.css
+++ b/src/components/Home/MainSection/CreatePost/CreatePost.css
@@ -55,7 +55,7 @@
     border-color: #eee;
 }
 .Type{
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: flex-start;
@@ -64,6 +64,7 @@
 }
 
 .Type img{
+    padding-left: 0.1vw;
     height: 50px;
     width: 50px;
     border-radius: 50%;
@@ -71,6 +72,7 @@
 
 .Type textarea{
     resize: none;
+    padding-top: 12px;
     overflow: hidden;
     min-height: 25px;
     /* max-height: 100px; */
@@ -81,7 +83,17 @@
     background-color: transparent;
 }
 
+.Errormessage{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
 
+.Errormessage > p{
+    color: red;
+    padding-left: 1em;
+    font-size: small;
+}
 
 .line{
     height: 0.2px;
