--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -10,7 +10,7 @@
     box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
     transition: all 0.3s;
     margin-bottom: 0.5px;
-
+    overflow-x: clip;
 }
 
 .Dark{
@@ -273,3 +273,34 @@
         padding: 2px 6px;
     }
 }
+
+
+
+@keyframes loader-animation {
+    0% {
+      left: -100%;
+    }
+    49% {
+      left: 100%;
+    }
+    50% {
+      left: 100%;
+    }
+    100% {
+      left: -100%;
+    }
+  }
+  .loader {
+    height: 5px;
+    width: 100%;
+  }
+  .loader .bar {
+    width: 100%;
+    position: absolute;
+    height: 5px;
+    background-color: dodgerblue;
+    animation-name: loader-animation;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+  }
