--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -13,7 +13,7 @@
 
 .main{
     display: flex;
-    /* justify-content: center; */
+    justify-content: center;
     margin: auto;
     position: relative;
     max-width: 1400px;
