--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,13 @@
 *{
   margin: 0;
-  padding:0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-html{
-  height: 100%;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open sans', sans-serif;
+  /* font-weight: 500; */
 }
-
-body{
-  height: 100%;
-  overflow: hidden;
-}
-
-#root{
-  height: 100%;
-}
-
-
-
 
