--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -1,7 +1,7 @@
 .Header{
     background-color: white;
     margin: auto;
-    position: sticky;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
