--- a/src/components/Home/MainSection/Feed/Post/Post.css
+++ b/src/components/Home/MainSection/Feed/Post/Post.css
@@ -13,8 +13,14 @@
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     position: relative;
     /* transition: all 0.3s; */
-    overflow-y: visible;
     overflow-x: clip;
+    /* overflow-y: visible; */
+}
+
+.Wrapper{
+    overflow-y: visible;
+    border-radius: 8px;
+    position: relative;
 }
 
 .Dark{
