--- a/src/containers/Home/Home.css
+++ b/src/containers/Home/Home.css
@@ -1,13 +1,11 @@
 .Home{
-  position: fixed;
+  position: relative;
   transition: all 0.3s;
-  display: block;
-  height: 100%;
+  height: calc(100vh - 50px);
   width: 100%;
-  top: 0;
-  left: 0;
   overflow-y: scroll;
   box-sizing: border-box;
+  margin-top: 50px;
 }
 
 .Dark {
@@ -30,26 +28,4 @@
   font-size: xxx-large;
 }
 
-.SwitchButton {
-  position: fixed;
-  bottom: 10px;
-  right: 25px;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-  outline: none;
-  border: none;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-  background-color: coral;
-  color: white;
-  padding-top: 5px;
-  cursor: pointer;
-  z-index: 200;
-}
 
-
-@media (max-width:400px){
-  .SwitchButton{
-    display: none;
-  }
-}
