--- a/src/containers/Home/RightSection/RightPanel.css
+++ b/src/containers/Home/RightSection/RightPanel.css
@@ -1,11 +1,11 @@
 .RightPanel{
     display: flex;
     flex-direction: column;
-    top: 50px;
-    height:calc(100vh - 50px);
-    max-width: 300px;
-    position: sticky;
+    top: 0px;
     right: 0px;
+    height:calc(100vh - 50px);
+    width: 300px;
+    position: sticky;
     font-family: "Work Sans";
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     transition: all 0.3s;
