--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   font-family: 'Open sans', sans-serif;
   /* font-weight: 500; */
 }
