fixing of action popup

--- a/src/HOC/Layout/Layout.css
+++ b/src/HOC/Layout/Layout.css
@@ -1,12 +1,9 @@
 .Layout{
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    overflow-y: auto;
-    overflow-x: hidden;
-    position: relative;
+  min-height: 100vh;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .SwitchButton {
