--- a/src/containers/Profile/Profile.css
+++ b/src/containers/Profile/Profile.css
@@ -3,8 +3,9 @@
     transition: all 0.3s;
     display: block;
     overflow-y: scroll;
-    height: 100%;
+    height: calc(100vh - 50px);
     width: 100%;
+    margin-top: 51px;
 }
 
 .Dark {
