--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -80,12 +80,11 @@
 
 @media (max-width:630px) {
     .Chat{
-        top: 52px;
+        top: 50px;
+        right: 0;
+        height: calc(100vh - 50px);
+        min-width: 100vw !important;
+        z-index: 0;
     }
 }
 
-@media (max-width: 400px){
-    .Chat{
-        display: none;
-    }
-}
