--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,21 +1,23 @@
 .Chat{
-    min-height: calc(100vh - 55px);
-    width: 450px;
+    height: calc(100vh - 50px);
     background-color: white;
     padding:10px;
+    max-width: 1440px;
     /* overflow-y: scroll; */
     box-sizing: border-box;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-    border: 1px solid #eee;
-    position: fixed;
-    right: -100%;
-    top: 60px;
     transition: all 0.5s;
-    z-index: 250;
+    margin: auto;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
 }
 
-.ActiveChat{
-    right: 0%;
+.ChatList{
+    width:35% ;
+    max-width: 400px;
+    height: 100%;
 }
 
 .Dark{
