--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -54,11 +54,11 @@
     justify-content: flex-end;
 }
 .Sent > div{
-    border-radius: 10px 0px 10px 10px;
+    border-radius: 20px 0px 20px 20px;
     background-color: #027CDE;
 }
 .Received > div{
-    border-radius: 0px 10px 10px 10px;
+    border-radius: 0px 20px 20px 20px;
 }
 
 
@@ -70,9 +70,10 @@
 .Comment{
     margin-left: 5px;
     width: 100%;
+    padding: 10px;
 }
 .Comment input{
-    padding: 5px 5px;
+    padding: 5px 15px;
     border: none;
     outline: none;
     background-color: grey;
@@ -82,4 +83,23 @@
 .Comment input:focus{
     border: none;
     outline: none;
+}
+
+
+@media (max-width:700px) {
+    .MessageBox{
+        position: fixed !important;
+        width: 100vw;
+        height: calc(100vh - 50px);
+        top: 50px;
+        left: 0;
+        border-left: none;
+    }
+
+    .Messages{
+        padding: 0px 5px;
+    }
+    .Msg{
+        max-width: 70%;
+    }
 }
