--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -72,15 +72,18 @@
     float: right;
 }
 
-
-
-@media (max-width:630px) {
+@media (max-width:700px) {
     .Chat{
-        top: 50px;
         right: 0;
         height: calc(100vh - 50px);
         min-width: 100vw !important;
         z-index: 0;
     }
+    .ChatList{
+        width: 100vw;
+        height: 100%;
+    }
 }
+
+
 
