--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -1,5 +1,5 @@
 .Chat{
-    height: calc(100vh - 50px);
+    height: 85vh;
     background-color: white;
     padding:10px;
     max-width: 1440px;
@@ -8,7 +8,7 @@
     box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     transition: all 0.5s;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -82,13 +82,16 @@
 @media (max-width:700px) {
     .Chat{
         right: 0;
-        height: calc(100vh - 50px);
-        min-width: 100vw !important;
+        height: 85vh;
+        width: 90vw;
         z-index: 0;
+        border: 1px solid green;
+        display: block;
     }
     .ChatList{
-        width: 100vw;
+        width: 100%;
         height: 100%;
+        border: 1px solid red;
     }
 }
 
