--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -1,11 +1,12 @@
 .MessageBox{
-    height: calc(100vh - 65px);
+    height: 100%;
     width: 75%;
     transition: right 0.5s;
     background-color: inherit;
     display: flex;
     flex-direction: column;
     border-left: 2px solid lightgray;
+    border: 1px solid white;
 }
 
 
@@ -13,7 +14,6 @@
    display: flex; 
    height: 50px;
    width: 100%;
-   border: 1px solid black;
    padding: 10px;
 }
 
@@ -81,6 +81,7 @@
     border-radius: 20px;
     height: 40px;
 }
+
 .Comment input:focus{
     border: none;
     outline: none;
@@ -89,11 +90,9 @@
 
 @media (max-width:700px) {
     .MessageBox{
-        position: fixed !important;
-        width: 100vw;
-        height: calc(100vh - 120px);
-        top: 50px;
-        left: 0;
+        position: absolute;
+        width: 100%;
+        right: -100%;
         border-left: none;
     }
 
