--- a/src/components/UI/SearchBox/SearchBox.css
+++ b/src/components/UI/SearchBox/SearchBox.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     background-color: rgb(248, 248, 248);
-    border: 1px solid #ccc;
+    border: 1px solid rgb(226, 226, 226);
     box-sizing: border-box;
     border-radius: 50px;
     padding: 5px 10px 5px 5px;
@@ -12,7 +12,7 @@
 }
 
 .Dark{
-    background-color: darkgrey;
+    background-color: rgb(255, 255, 255);
     color: white;
 }
 
