--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -77,7 +77,7 @@
     padding: 5px 15px;
     border: none;
     outline: none;
-    background-color: grey;
+    background-color: rgb(108, 108, 108);
     border-radius: 20px;
     height: 40px;
 }
