--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -16,15 +16,17 @@
 
 .ChatList{
     width:35% ;
-    max-width: 400px;
     height: 100%;
-    z-index: 100;
     margin: 10px 5px;
 }
 
 .SearchInputBox{
     z-index: 200;
     position: relative;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 
 .Dark{
@@ -81,17 +83,16 @@
 
 @media (max-width:700px) {
     .Chat{
-        right: 0;
-        height: 85vh;
+        height: 90vh;
         width: 90vw;
-        z-index: 0;
-        border: 1px solid green;
-        display: block;
+        padding:10px;
+        overflow-x: hidden;
+        margin-top: 70px;
     }
     .ChatList{
         width: 100%;
-        height: 100%;
-        border: 1px solid red;
+        height: auto;
+        margin: 0px;
     }
 }
 
