--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -6,8 +6,9 @@
     display: flex;
     flex-direction: column;
     border-left: 2px solid lightgray;
-    border: 1px solid white;
 }
+
+
 
 
 .Head{
@@ -15,6 +16,11 @@
    height: 50px;
    width: 100%;
    padding: 10px;
+   align-items: center;
+}
+
+.Head > h1{
+    margin-left: 10px;
 }
 
 .Messages{
@@ -92,8 +98,15 @@
     .MessageBox{
         position: absolute;
         width: 100%;
-        right: -100%;
+        right: -110%;
+        top: 0;
         border-left: none;
+        /* background-color: cadetblue; */
+        z-index: 200;
+    }
+
+    .Show{
+        right: 0%;
     }
 
     .Messages{
