--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     border-left: 2px solid lightgray;
+    overflow-x: clip;
 }
 
 
@@ -116,3 +117,33 @@
         max-width: 70%;
     }
 }
+
+
+@keyframes loader-animation {
+    0% {
+      left: -100%;
+    }
+    49% {
+      left: 100%;
+    }
+    50% {
+      left: 100%;
+    }
+    100% {
+      left: -100%;
+    }
+  }
+  .loader {
+    height: 5px;
+    width: 100%;
+  }
+  .loader .bar {
+    width: 100%;
+    position: absolute;
+    height: 5px;
+    background-color: dodgerblue;
+    animation-name: loader-animation;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+  }
