--- a/src/containers/Home/Chat/Chat.css
+++ b/src/containers/Home/Chat/Chat.css
@@ -18,6 +18,7 @@
     width:35% ;
     height: 100%;
     margin: 10px 5px;
+    overflow-y: auto;
 }
 
 .SearchInputBox{
@@ -87,7 +88,7 @@
         width: 90vw;
         padding:10px;
         overflow-x:hidden;
-        margin-top: 110px;
+        /* margin-top: 110px; */
     }
     .ChatList{
         width: 100%;
