--- a/src/containers/Home/Chat/MessageBox.css
+++ b/src/containers/Home/Chat/MessageBox.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     border-left: 2px solid lightgray;
     overflow-x: clip;
+    padding: 10px;
 }
 
 
@@ -18,10 +19,16 @@
    width: 100%;
    padding: 10px;
    align-items: center;
+   justify-content: space-between;
 }
 
 .Head > h1{
     margin-left: 10px;
+}
+
+.Head > div{
+    display: flex;
+    align-items: center;
 }
 
 .Messages{
@@ -101,7 +108,7 @@
     padding: 5px 15px;
     border: none;
     outline: none;
-    background-color: #F5F7FB;
+    background-color: #e9effa;
     border-radius: 20px;
     height: 40px;
 }
@@ -115,6 +122,18 @@
     outline: none;
 }
 
+.BackButton{
+    display: none;
+}
+
+.Dark .BackButton{
+    color: white;
+    display: none;
+}
+
+.Dark .OptionButton{
+    color: white;
+}
 
 @media (max-width:700px) {
     .MessageBox{
@@ -127,6 +146,7 @@
         /* background-color: cadetblue; */
         z-index: 200;
         margin: 0px;
+        padding: 3px;
     }
 
     .Show{
@@ -134,10 +154,10 @@
     }
 
     .Messages{
-        padding: 0px 5px;
+        padding: 0px 3px;
     }
     .Msg{
-        max-width: 70%;
+        max-width: 80%;
     }
 
     .Msg > p{
@@ -148,6 +168,13 @@
         height: 30px;
         border-radius: 50%;
         margin-right: 5px;
+    }
+
+    .BackButton{
+        display: block;
+    }
+    .Dark .BackButton{
+        display: block;
     }
 }
 
@@ -174,7 +201,7 @@
     width: 100%;
     position: absolute;
     height: 5px;
-    background-color: dodgerblue;
+    background: linear-gradient(to right,rgb(76,217,105),rgb(90,200,250),rgb(0,132,255),rgb(52,170,220),rgb(88,86,217),rgb(255,45,83));
     animation-name: loader-animation;
     animation-duration: 3s;
     animation-iteration-count: infinite;
